# Samsaram-Ai

./: .gitignore  AGENTS.md  CLAUDE.md  CODER.md  EMAIL_SYSTEM.md  FRONTEND_README.md  IDENTIFIED_ISSUES.md  IFLOW.md  KILOCHAT_README.md  MULTILINGUAL_SETUP.md  PIPER_VOICE_INSTALL.md  QWEN.md  README.md  alembic.ini  install_amy_voice.bat  install_piper_voices.bat  jest.config.js  kilochat_cli.py  package.json  pyproject.toml  requirements.txt  start_uvicorn.py  tailwind.config.ts
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_date_of_birth.py  0003_add_password_reset_tokens.py
app/: db.py  init_db.py  main.py
app/core/: config.py  config_restored.py  exception_usage_example.py  exceptions.py  logging_config.py  retry_handler.py  security.py
app/models/: auth_models.py  session.py
app/routes/: auth.py  chat.py  stt.py
app/schemas/: auth.py  chat.py
app/services/: auth_service.py  birthday_service.py  chat_service.py  email_service.py  faster_whisper_service.py  indic_parler_service.py  llm_service.py  natural_speech.py  qwen_service.py  stt_service.py  tts_service.py  vosk_service.py  xtts_service.py
docs/: chatbot_ui_features.md  exceptions.md
frontend/: .gitignore  PROJECT_SUMMARY.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.module.css  App.tsx  alias.d.ts  main.tsx  setupTests.ts
frontend/src/core/: index.ts
frontend/src/pages/: ChatPage.tsx  (+3 more)
scripts/: renumber_sessions.py
src/components/: chat-confirmation.tsx
(+74 files in other folders)
