[tool.poetry]
name = "chatbot-v2"
version = "2.0.0"
description = "A chatbot system with emotion-aware TTS capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.scripts]
# The `kilo` CLI is provided externally, not via this package.
# Install the Kilo CLI separately and ensure it's in PATH.

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
openai = "^1.3.5"
websockets = "^12.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
tenacity = "^8.2.3"
piper-tts = "^1.4.2"
TTS = "^0.22.0"
torch = "^2.1.0"
torchaudio = "^2.1.0"
faster-whisper = "^0.6.2"
ctranslate2 = "^4.6.0"
vosk = "^0.3.45"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3